// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YAxis it renders consistently 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="130%"
          y2="130%"
        />
        <div
          axis={1}
          label={0}
          xPos={5}
          yPos={130}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <div
          axis={1}
          label={10}
          xPos={5}
          yPos={90}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <div
          axis={1}
          label={20}
          xPos={5}
          yPos={50}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <div
          axis={1}
          label={30}
          xPos={5}
          yPos={10}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="5%"
          x2="10%"
          y1="-30%"
          y2="-30%"
        />
        <div
          axis={1}
          label={40}
          xPos={5}
          yPos={-30}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`YAxis it renders consistently with an explicit config 1`] = `
<div
  className="YAxis"
>
  <svg
    className="YAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="10%"
      y1="10%"
      y2="90%"
    />
    <g
      className="YAxis__Ticks"
    >
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="130%"
          y2="130%"
        />
        <div
          axis={1}
          label={0}
          xPos={NaN}
          yPos={130}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="90%"
          y2="90%"
        />
        <div
          axis={1}
          label={10}
          xPos={NaN}
          yPos={90}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="50%"
          y2="50%"
        />
        <div
          axis={1}
          label={20}
          xPos={NaN}
          yPos={50}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="10%"
          y2="10%"
        />
        <div
          axis={1}
          label={30}
          xPos={NaN}
          yPos={10}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="NaN%"
          x2="10%"
          y1="-30%"
          y2="-30%"
        />
        <div
          axis={1}
          label={40}
          xPos={NaN}
          yPos={-30}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;
